# FIle-Spell-Checker

./: README.md
dictionary_trie/sample-inputs/: dictionary.txt
dictionary_trie/src/: CMakeLists.txt  Dictionary.cpp  Dictionary.h  Trie.cpp  Trie.h  application.cpp
dictionary_trie/test/: test-Additional.cpp
